; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/libpq/extr_auth-scram.c_mock_scram_secret.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/libpq/extr_auth-scram.c_mock_scram_secret.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SCRAM_DEFAULT_SALT_LEN = common dso_local global i32 0, align 4
@ERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [22 x i8] c"could not encode salt\00", align 1
@SCRAM_DEFAULT_ITERATIONS = common dso_local global i32 0, align 4
@SCRAM_KEY_LEN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32*, i8**, i32*, i32*)* @mock_scram_secret to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mock_scram_secret(i8* %0, i32* %1, i8** %2, i32* %3, i32* %4) #0 {
  %6 = alloca i8*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i8**, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i8*, align 8
  %13 = alloca i32, align 4
  store i8* %0, i8** %6, align 8
  store i32* %1, i32** %7, align 8
  store i8** %2, i8*** %8, align 8
  store i32* %3, i32** %9, align 8
  store i32* %4, i32** %10, align 8
  %14 = load i8*, i8** %6, align 8
  %15 = call i8* @scram_mock_salt(i8* %14)
  store i8* %15, i8** %11, align 8
  %16 = load i32, i32* @SCRAM_DEFAULT_SALT_LEN, align 4
  %17 = call i32 @pg_b64_enc_len(i32 %16)
  store i32 %17, i32* %13, align 4
  %18 = load i32, i32* %13, align 4
  %19 = add nsw i32 %18, 1
  %20 = call i64 @palloc(i32 %19)
  %21 = inttoptr i64 %20 to i8*
  store i8* %21, i8** %12, align 8
  %22 = load i8*, i8** %11, align 8
  %23 = load i32, i32* @SCRAM_DEFAULT_SALT_LEN, align 4
  %24 = load i8*, i8** %12, align 8
  %25 = load i32, i32* %13, align 4
  %26 = call i32 @pg_b64_encode(i8* %22, i32 %23, i8* %24, i32 %25)
  store i32 %26, i32* %13, align 4
  %27 = load i32, i32* %13, align 4
  %28 = icmp slt i32 %27, 0
  br i1 %28, label %29, label %32

29:                                               ; preds = %5
  %30 = load i32, i32* @ERROR, align 4
  %31 = call i32 @elog(i32 %30, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0))
  br label %32

32:                                               ; preds = %29, %5
  %33 = load i8*, i8** %12, align 8
  %34 = load i32, i32* %13, align 4
  %35 = sext i32 %34 to i64
  %36 = getelementptr inbounds i8, i8* %33, i64 %35
  store i8 0, i8* %36, align 1
  %37 = load i8*, i8** %12, align 8
  %38 = load i8**, i8*** %8, align 8
  store i8* %37, i8** %38, align 8
  %39 = load i32, i32* @SCRAM_DEFAULT_ITERATIONS, align 4
  %40 = load i32*, i32** %7, align 8
  store i32 %39, i32* %40, align 4
  %41 = load i32*, i32** %9, align 8
  %42 = load i32, i32* @SCRAM_KEY_LEN, align 4
  %43 = call i32 @memset(i32* %41, i32 0, i32 %42)
  %44 = load i32*, i32** %10, align 8
  %45 = load i32, i32* @SCRAM_KEY_LEN, align 4
  %46 = call i32 @memset(i32* %44, i32 0, i32 %45)
  ret void
}

declare dso_local i8* @scram_mock_salt(i8*) #1

declare dso_local i32 @pg_b64_enc_len(i32) #1

declare dso_local i64 @palloc(i32) #1

declare dso_local i32 @pg_b64_encode(i8*, i32, i8*, i32) #1

declare dso_local i32 @elog(i32, i8*) #1

declare dso_local i32 @memset(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
